Update stylesheets, make paragraph items same width and fix text-wrap in table.

--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ article:last-of-type {
 blockquote {
     text-align: center;
     background-color: rgba(139, 0, 0, 0.8);
-    padding: 1rem;
+    padding: 1rem 0;
     margin: 0;
 }
 
@@ -97,6 +97,7 @@ table {
 
 th {
     text-align: left;
+    text-wrap: nowrap;
 }
 
 td {
